# HWDFS

./: README.md
HWDFS-v1.0/: CMakeLists.txt  Client.cpp  DataServer.cpp  LocalClient.cpp  MasterServer.cpp  ParityServer.cpp  communicate.thrift  config.xml
HWDFS-v1.0/common/: CMakeLists.txt
HWDFS-v1.0/common/include/: Buffer.h  Log.h  Manage.h  MetaManage.h  RSConfiguration.h  ServerInfo.h  Setting.h  TSCNS.h
HWDFS-v1.0/common/src/: Manage.cpp  MetaManage.cpp  RSConfiguration.cpp  ServerInfo.cpp  Setting.cpp  TSCNS.cpp
HWDFS-v1.0/erasure/: CMakeLists.txt
HWDFS-v1.0/erasure/include/: CodingLoop.h  ExpCodingLoop.h  Galois.h  Matrix.h  ReedSolomon.h  Shared.h  TableCodingLoop.h
HWDFS-v1.0/erasure/src/: CodingLoop.cpp  ExpCodingLoop.cpp  Galois.cpp  Matrix.cpp  ReedSolomon.cpp  TableCodingLoop.cpp
HWDFS-v1.0/robin-map/include/tsl/: robin_hash.h
HWDFS-v1.0/scheme/: CMakeLists.txt
HWDFS-v1.0/scheme/include/: DABRI.h  DDBHW.h  FullLog.h  PARIX.h  PARIXLog.h  PWDR.h  ParityLog.h  Replication.h  Replication_Log.h  Scheme.h  SchemeFactory.h
HWDFS-v1.0/scheme/src/: DABRI.cpp  DDBHW.cpp  FullLog.cpp  PARIX.cpp  PARIXLog.cpp  PWDR.cpp  ParityLog.cpp  Replication.cpp  Replication_Log.cpp  Scheme.cpp  SchemeFactory.cpp
HWDFS-v1.0/service/: CMakeLists.txt
HWDFS-v1.0/service/include/: MasterService.h  StoreService.h  communicate_constants.h  communicate_types.h
HWDFS-v1.0/service/src/: MasterService.cpp  StoreService.cpp  communicate_constants.cpp  communicate_types.cpp
HWDFS-v1.0/tiny/: CMakeLists.txt
